# stm32-vscode-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: main.h
src/: main.c
